...
                app:layout_constraintEnd_toStartOf="@+id/diary_button"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@+id/map_button"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/add_circle_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:backgroundTint="#4CAF50"
                    app:elevation="4dp"
                    app:fabSize="normal"
...
